BE - Add long/lat and address to MonitoringLocation (#1076)
* BE - Add long/lat and address to MonitoringLocation

HS-1539

* HS-1539: simplify address

* HS-1539: fix tests

* HS-1539: minor clean up

---------

Co-authored-by: Freddy Chu <fchu@opennms.com>